# ai_briefing_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
app/db/: init_db.py  models.py  session.py
app/jobs/: delete_video.py
app/routers/: channels.py  subscriptions.py  videos.py  webhooks.py
app/schema/: channel.py  subscription.py  video.py
app/services/: channel_registry.py  channel_resolver.py  metadata_worker.py  notification_worker.py  poller.py  subscription_service.py  summariser_utils.py  summariser_worker.py  template_renderer.py  transcript_worker.py  websub.py  youtube_notifications.py
app/templates/: notification_email.txt.jinja
app/tests/: test_channel_registry.py  test_channel_resolver.py  test_metadata_worker.py  test_notification_worker.py  test_summariser_worker.py  test_template_renderer.py  test_transcript_worker.py  test_youtube_notifications.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: ChannelManager.tsx  DeleteButton.tsx  VideoDetail.tsx  VideoTable.tsx
