[tool.poetry]
name = "ai-briefing-bot"
version = "0.1.0"
description = "AI briefing bot MVP with webhook-driven YouTube summaries"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
apispec = "^6.6.1"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.1"
langchain = "^0.1.16"
openai = "^1.30.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = {extras = ["cli"], version = "^0.27.0"}
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
