[project]
name = "ai-briefing-bot"
version = "0.1.0"
description = "AI briefing bot with webhook-driven YouTube summaries"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "sqlalchemy>=2.0.29,<3.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "httpx>=0.27.0,<0.28.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "apispec>=6.6.1,<7.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "langchain>=0.1.16,<0.2.0",
    "openai>=1.30.1,<2.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.6,<0.24.0",
    "httpx[cli]>=0.27.0,<0.28.0",
    "ruff>=0.4.4,<0.5.0",
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
